Fixes issue where lines would not wrap correctly in vertical tabs.

--- a/scss/_components/_tabs.scss
+++ b/scss/_components/_tabs.scss
@@ -37,6 +37,7 @@
   }
 
   a {
+    display: block;
     text-decoration: none;
     padding: 0 9px;
   }
